clusters/home/application/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - image: ghcr.io/azuar4e/api-gateway-tfg:16 # {"$imagepolicy": "flux-system:api-gateway-tfg"}
        name: api-gateway-tfg
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
