clusters/home/application/scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scraper
  name: scraper
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - image: ghcr.io/azuar4e/scraper-tfg:latest # {"$imagepolicy": "flux-system:scraper-tfg"}
        name: scraper-tfg
        imagePullPolicy: Always
