clusters/home/application/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api-svc
  name: api-svc
  namespace: default
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-svc
  type: ClusterIP
status:
  loadBalancer: {}
