clusters/home/application/echo-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-canary
  namespace: default
  labels:
    app: echo-canary
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: echo-canary
  type: ClusterIP
