clusters/home/application/echo-stable-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-stable
  namespace: default
  labels:
    app: echo-stable
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: echo-stable
  type: ClusterIP
