clusters/home/application/ing-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-canary
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
  - host: echo.local
    http:
      paths:
      - backend:
          service:
            name: echo-canary
            port:
              number: 80
        path: /
        pathType: Prefix
