clusters/home/application/ing-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-stable
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: echo.local
    http:
      paths:
      - backend:
          service:
            name: echo-stable
            port:
              number: 80
        path: /
        pathType: Prefix
